...
    ),
) {
    val groupedBooks by viewModel.groupedBooks.collectAsState()
    val query by viewModel.query
    Column {
        LazyColumn(
            modifier = modifier.testTag("BookList")
        ) {
            item {
                SearchBar(
                    query = query,
                    onQueryChange = viewModel::search,
                    modifier = Modifier.background(MaterialTheme.colors.primary)
...
